re2c/re2c/examples/07_cxx98.i.c
/* Generated by re2c */
#include <float.h>
#include <limits.h>
#include <stdio.h>
#include <string.h>

#define YYMAXFILL 17

static const size_t SIZE = 64 * 1024;

struct input_t {
    unsigned char buf[SIZE + YYMAXFILL];
    unsigned char *lim;
    unsigned char *cur;
    unsigned char *mar;
    unsigned char *tok;
    bool eof;

    FILE *const file;

    input_t(FILE *f)
        : buf()
        , lim(buf + SIZE)
        , cur(lim)
        , mar(lim)
        , tok(lim)
        , eof(false)
        , file(f)
    {}
    bool fill(size_t need)
    {
        if (eof) {
            return false;
        }
        const size_t free = tok - buf;
        if (free < need) {
            return false;
        }
        memmove(buf, tok, lim - tok);
        lim -= free;
        cur -= free;
        mar -= free;
        tok -= free;
        lim += fread(lim, 1, free, file);
        if (lim < buf + SIZE) {
            eof = true;
            memset(lim, 0, YYMAXFILL);
            lim += YYMAXFILL;
        }
        return true;
    }
};



template<int base>
static bool adddgt(unsigned long &u, unsigned long d)
{
    if (u > (ULONG_MAX - d) / base) {
        return false;
    }
    u = u * base + d;
    return true;
}

static bool lex_oct(const unsigned char *s, const unsigned char *e, unsigned long &u)
{
    for (u = 0, ++s; s < e; ++s) {
        if (!adddgt<8>(u, *s - 0x30u)) {
            return false;
        }
    }
    return true;
}

static bool lex_dec(const unsigned char *s, const unsigned char *e, unsigned long &u)
{
    for (u = 0; s < e; ++s) {
        if (!adddgt<10>(u, *s - 0x30u)) {
            return false;
        }
    }
    return true;
}

static bool lex_hex(const unsigned char *s, const unsigned char *e, unsigned long &u)
{
    for (u = 0, s += 2; s < e;) {
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':	goto yy4;
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy6;
	default:	goto yy2;
	}
yy2:
	++s;
	{ if (!adddgt<16>(u, s[-1] - 0x30u))      return false; continue; }
yy4:
	++s;
	{ if (!adddgt<16>(u, s[-1] - 0x41u + 10)) return false; continue; }
yy6:
	++s;
	{ if (!adddgt<16>(u, s[-1] - 0x61u + 10)) return false; continue; }
}

    }
    return true;
}

static bool lex_str(input_t &in, unsigned char q)
{
    printf("%c", q);
    for (unsigned long u = q;; printf("\\x%lx", u)) {
        in.tok = in.cur;
        
{
	unsigned char yych;
	if ((in.lim - in.cur) < 10) if (!in.fill(10)) return false;
	yych = *in.cur;
	switch (yych) {
	case '\n':	goto yy12;
	case '\\':	goto yy14;
	default:	goto yy10;
	}
yy10:
	++in.cur;
	{ u = in.tok[0]; if (u == q) break; continue; }
yy12:
	++in.cur;
yy13:
	{ return false; }
yy14:
	yych = *(in.mar = ++in.cur);
	switch (yych) {
	case '"':	goto yy15;
	case '\'':	goto yy17;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy19;
	case '?':	goto yy21;
	case 'U':	goto yy23;
	case '\\':	goto yy25;
	case 'a':	goto yy27;
	case 'b':	goto yy29;
	case 'f':	goto yy31;
	case 'n':	goto yy33;
	case 'r':	goto yy35;
	case 't':	goto yy37;
	case 'u':	goto yy39;
	case 'v':	goto yy40;
	case 'x':	goto yy42;
	default:	goto yy13;
	}
yy15:
	++in.cur;
	{ u = '"';  continue; }
yy17:
	++in.cur;
	{ u = '\''; continue; }
yy19:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy43;
	default:	goto yy20;
	}
yy20:
	{ lex_oct(in.tok, in.cur, u); continue; }
yy21:
	++in.cur;
	{ u = '?';  continue; }
yy23:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy44;
	default:	goto yy24;
	}
yy24:
	in.cur = in.mar;
	goto yy13;
yy25:
	++in.cur;
	{ u = '\\'; continue; }
yy27:
	++in.cur;
	{ u = '\a'; continue; }
yy29:
	++in.cur;
	{ u = '\b'; continue; }
yy31:
	++in.cur;
	{ u = '\f'; continue; }
yy33:
	++in.cur;
	{ u = '\n'; continue; }
yy35:
	++in.cur;
	{ u = '\r'; continue; }
yy37:
	++in.cur;
	{ u = '\t'; continue; }
yy39:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy45;
	default:	goto yy24;
	}
yy40:
	++in.cur;
	{ u = '\v'; continue; }
yy42:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy46;
	default:	goto yy24;
	}
yy43:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy49;
	default:	goto yy20;
	}
yy44:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy50;
	default:	goto yy24;
	}
yy45:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy51;
	default:	goto yy24;
	}
yy46:
	++in.cur;
	if (in.lim <= in.cur) if (!in.fill(1)) return false;
	yych = *in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy46;
	default:	goto yy48;
	}
yy48:
	{ if (!lex_hex(in.tok, in.cur, u)) return false; continue; }
yy49:
	++in.cur;
	goto yy20;
yy50:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy52;
	default:	goto yy24;
	}
yy51:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy53;
	default:	goto yy24;
	}
yy52:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy54;
	default:	goto yy24;
	}
yy53:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy55;
	default:	goto yy24;
	}
yy54:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy57;
	default:	goto yy24;
	}
yy55:
	++in.cur;
	{ lex_hex(in.tok, in.cur, u); continue; }
yy57:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy58;
	default:	goto yy24;
	}
yy58:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy59;
	default:	goto yy24;
	}
yy59:
	yych = *++in.cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy60;
	default:	goto yy24;
	}
yy60:
	++in.cur;
	{ lex_hex(in.tok, in.cur, u); continue; }
}

    }
    printf("%c", q);
    return true;
}

static bool lex_flt(const unsigned char *s)
{
    double d = 0;
    double x = 1;
    int e = 0;
    
mant_int:
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case '.':	goto yy66;
	case 'E':
	case 'e':	goto yy68;
	default:	goto yy64;
	}
yy64:
	++s;
	{ d = (d * 10) + (s[-1] - '0'); goto mant_int; }
yy66:
	++s;
	{ goto mant_frac; }
yy68:
	++s;
	{ goto exp_sign; }
}

mant_frac:
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy73;
	case 'E':
	case 'e':	goto yy75;
	default:	goto yy72;
	}
yy72:
	{ goto sfx; }
yy73:
	++s;
	{ d += (x /= 10) * (s[-1] - '0'); goto mant_frac; }
yy75:
	++s;
	{ goto exp_sign; }
}

exp_sign:
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case '+':	goto yy80;
	case '-':	goto yy81;
	default:	goto yy79;
	}
yy79:
	{ x = 1e+1; goto exp; }
yy80:
	++s;
	goto yy79;
yy81:
	++s;
	{ x = 1e-1; goto exp; }
}

exp:
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy86;
	default:	goto yy85;
	}
yy85:
	{ for (; e > 0; --e) d *= x;    goto sfx; }
yy86:
	++s;
	{ e = (e * 10) + (s[-1] - '0'); goto exp; }
}

sfx:
    
{
	unsigned char yych;
	yych = *s;
	switch (yych) {
	case 'F':
	case 'f':	goto yy92;
	default:	goto yy90;
	}
yy90:
	++s;
	{ goto end; }
yy92:
	++s;
	{ if (d > FLT_MAX) return false; goto end; }
}

end:
    printf("%g", d);
    return true;
}

static bool lex(input_t &in)
{
    unsigned long u;
    for (;;) {
        in.tok = in.cur;
        
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	if ((in.lim - in.cur) < 17) if (!in.fill(17)) return false;
	yych = *in.cur;
	switch (yych) {
	case 0x00:	goto yy96;
	case '\t':
	case '\n':
	case '\v':
	case '\r':
	case ' ':	goto yy100;
	case '!':	goto yy103;
	case '"':	goto yy105;
	case '#':	goto yy107;
	case '%':	goto yy109;
	case '&':	goto yy111;
	case '\'':	goto yy113;
	case '(':	goto yy114;
	case ')':	goto yy116;
	case '*':	goto yy118;
	case '+':	goto yy120;
	case ',':	goto yy122;
	case '-':	goto yy124;
	case '.':	goto yy126;
	case '/':	goto yy128;
	case '0':	goto yy130;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy132;
	case ':':	goto yy135;
	case ';':	goto yy137;
	case '<':	goto yy139;
	case '=':	goto yy141;
	case '>':	goto yy143;
	case '?':	goto yy145;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'h':
	case 'j':
	case 'k':
	case 'q':
	case 'y':
	case 'z':	goto yy147;
	case 'L':	goto yy150;
	case '[':	goto yy151;
	case ']':	goto yy153;
	case '^':	goto yy155;
	case 'a':	goto yy157;
	case 'b':	goto yy158;
	case 'c':	goto yy159;
	case 'd':	goto yy160;
	case 'e':	goto yy161;
	case 'f':	goto yy162;
	case 'g':	goto yy163;
	case 'i':	goto yy164;
	case 'l':	goto yy165;
	case 'm':	goto yy166;
	case 'n':	goto yy167;
	case 'o':	goto yy168;
	case 'p':	goto yy169;
	case 'r':	goto yy170;
	case 's':	goto yy171;
	case 't':	goto yy172;
	case 'u':	goto yy173;
	case 'v':	goto yy174;
	case 'w':	goto yy175;
	case 'x':	goto yy176;
	case '{':	goto yy177;
	case '|':	goto yy179;
	case '}':	goto yy181;
	case '~':	goto yy183;
	default:	goto yy98;
	}
yy96:
	++in.cur;
	{ return in.lim - in.tok == YYMAXFILL; }
yy98:
	++in.cur;
	{ return false; }
yy100:
	yyaccept = 0;
	in.mar = ++in.cur;
	if (in.lim <= in.cur) if (!in.fill(1)) return false;
	yych = *in.cur;
	switch (yych) {
	case '\t':
	case '\n':
	case '\v':
	case '\r':
	case ' ':	goto yy100;
	case '/':	goto yy185;
	default:	goto yy102;
	}
yy102:
	{ printf(" "); continue; }
yy103:
	yych = *++in.cur;
	switch (yych) {
	case '=':	goto yy187;
	default:	goto yy104;
	}
yy104:
	{ printf("!");      continue; }
yy105:
	++in.cur;
yy106:
	{ if (!lex_str(in, in.cur[-1])) return false; continue; }
yy107:
	++in.cur;
	if (in.lim <= in.cur) if (!in.fill(1)) return false;
	yych = *in.cur;
	switch (yych) {
	case '\n':	goto yy189;
	case '\\':	goto yy191;
	default:	goto yy107;
	}
yy109:
	yych = *++in.cur;
	switch (yych) {
	case ':':	goto yy107;
	case '=':	goto yy193;
	case '>':	goto yy181;
	default:	goto yy110;
	}
yy110:
	{ printf("%%");     continue; }
yy111:
	yych = *++in.cur;
	switch (yych) {
	case '&':	goto yy195;
	case '=':	goto yy197;
	default:	goto yy112;
	}
yy112:
	{ printf("&");      continue; }
yy113:
	yych = *++in.cur;
	switch (yych) {
	case '\'':	goto yy199;
	default:	goto yy106;
	}
yy114:
	++in.cur;
	{ printf("(");      continue; }
yy116:
	++in.cur;
	{ printf(")");      continue; }
yy118:
	yych = *++in.cur;
	switch (yych) {
	case '=':	goto yy201;
	default:	goto yy119;
	}
yy119:
	{ printf("*");      continue; }
yy120:
	yych = *++in.cur;
	switch (yych) {
	case '+':	goto yy203;
	case '=':	goto yy205;
	default:	goto yy121;
	}
yy121:
	{ printf("+");      continue; }
yy122:
	++in.cur;
	{ printf(",");      continue; }
yy124:
	yych = *++in.cur;
	switch (yych) {
	case '-':	goto yy207;
	case '=':	goto yy209;
	case '>':	goto yy211;
	default:	goto yy125;
	}
yy125:
	{ printf("-");      continue; }
yy126:
	yyaccept = 1;
	yych = *(in.mar = ++in.cur);
	switch (yych) {
	case '*':	goto yy213;
	case '.':	goto yy215;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy216;
	default:	goto yy127;
	}
yy127:
	{ printf(".");      continue; }
yy128:
	yych = *++in.cur;
	switch (yych) {
	case '*':	goto yy219;
	case '/':	goto yy221;
	case '=':	goto yy223;
	default:	goto yy129;
	}
yy129:
	{ printf("/");      continue; }
yy130:
	yyaccept = 2;
	yych = *(in.mar = ++in.cur);
	switch (yych) {
	case 'X':
	case 'x':	goto yy230;
	default:	goto yy226;
	}
yy131:
	{ if (!lex_oct(in.tok, in.cur, u)) return false; goto sfx; }
yy132:
	yyaccept = 3;
	in.mar = ++in.cur;
	if ((in.lim - in.cur) < 3) if (!in.fill(3)) return false;
	yych = *in.cur;
	switch (yych) {
	case '.':	goto yy216;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy132;
	case 'E':
	case 'e':	goto yy229;
	default:	goto yy134;
	}
yy134:
	{ if (!lex_dec(in.tok, in.cur, u)) return false; goto sfx; }
yy135:
	yych = *++in.cur;
	switch (yych) {
	case ':':	goto yy231;
	case '>':	goto yy153;
	default:	goto yy136;
	}
yy136:
	{ printf(":");      continue; }
yy137:
	++in.cur;
	{ printf(";");      continue; }
yy139:
	yych = *++in.cur;
	switch (yych) {
	case '%':	goto yy177;
	case ':':	goto yy151;
	case '<':	goto yy233;
	case '=':	goto yy235;
	default:	goto yy140;
	}
yy140:
	{ printf("<");      continue; }
yy141:
